syntax = "proto3";

import "registration.proto";
import "google/protobuf/timestamp.proto";

package api;

option go_package = "github.com/mishankoGO/GophKeeper/api";

message Text {
  string name = 1;
  string hash_text = 2;
  google.protobuf.Timestamp updated_at = 3;
  bytes meta = 4;
}

service Texts {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteRequest);
}

message GetRequest {
  User user = 1;
  string name = 2;
}

message GetResponse {
  Text text = 1;
  string error = 2;
}

message UpdateRequest {
  User user = 1;
  string name = 2;
  Text text = 3;
}

message UpdateResponse {
  Text text = 1;
  string error = 2;
}

message DeleteRequest {
  User user = 1;
  string name = 2;
}

message DeleteResponse {
  bool ok = 1;
  string error = 2;
}